[gd_scene load_steps=20 format=3 uid="uid://ckbitpcqxs5ao"]

[ext_resource type="Script" path="res://Scripts/GameControl.gd" id="1_2axsc"]
[ext_resource type="Script" path="res://Scripts/GameCamera.gd" id="1_we6ai"]
[ext_resource type="Script" path="res://AI/AIControler.gd" id="2_w08l3"]
[ext_resource type="Texture2D" uid="uid://deqhvnfw114vp" path="res://Sprites/advance.png" id="5_1p0vp"]
[ext_resource type="StyleBox" uid="uid://crwlkegnfaves" path="res://Styles/style_label_align_picker.tres" id="5_mbtgw"]
[ext_resource type="Texture2D" uid="uid://jb8ugdvfra1h" path="res://Sprites/current_power.png" id="6_duti3"]
[ext_resource type="Texture2D" uid="uid://b5wmm400auwgm" path="res://Sprites/pause_button.png" id="7_6wsra"]
[ext_resource type="Texture2D" uid="uid://cate3b6eswfv2" path="res://Sprites/end_turn.png" id="7_7ft3b"]
[ext_resource type="StyleBox" uid="uid://l8vkqqi4prkx" path="res://Styles/style_label_normal_box.tres" id="7_r48wm"]
[ext_resource type="Texture2D" uid="uid://3uf3acu0wy42" path="res://Sprites/forfeit.png" id="8_chkrk"]
[ext_resource type="PackedScene" uid="uid://dt0hijbeupo" path="res://Objects/command_callout.tscn" id="8_gv3dv"]
[ext_resource type="Script" path="res://Scripts/alignment_list.gd" id="8_y476x"]
[ext_resource type="Texture2D" uid="uid://b83fxlgeqmrwf" path="res://Sprites/turn_order_players.png" id="9_gke1b"]
[ext_resource type="Texture2D" uid="uid://c2duva1ycjs8u" path="res://Sprites/city.png" id="10_5d75i"]
[ext_resource type="Texture2D" uid="uid://66jp7txq175w" path="res://Sprites/capital.png" id="11_i48c4"]
[ext_resource type="Texture2D" uid="uid://bht6umkfovrvf" path="res://Sprites/exit.png" id="12_st2cf"]
[ext_resource type="StyleBox" uid="uid://ciikkahxcqynr" path="res://Styles/style_label_pause.tres" id="16_ixm5t"]
[ext_resource type="Texture2D" uid="uid://dm2nl24gy8gxh" path="res://Sprites/accept.png" id="17_0hp27"]
[ext_resource type="Texture2D" uid="uid://ex66wqntm5fi" path="res://Sprites/deny.png" id="18_mtr1x"]

[node name="GameControler" type="Node2D"]
script = ExtResource("1_2axsc")

[node name="AIControler" type="Node" parent="."]
script = ExtResource("2_w08l3")

[node name="GameCamera" type="Camera2D" parent="." node_paths=PackedStringArray("UI", "UIHideable", "PauseMenu", "PlayerInfo", "PlayerActions", "AdvanceTurnButton", "EndTurnButton", "ForfeitButton", "PauseButton", "LeaveButton", "TurnOrder", "Attacks", "PowerSprite", "PowerAmount", "CurrentTurn", "CurrentAction", "VictoryMessage", "DefeatMessage", "LeaveMessage", "ForfeitMessage", "CommandCallout")]
z_index = 30
script = ExtResource("1_we6ai")
UI = NodePath("UI")
UIHideable = NodePath("UI/Hideable")
PauseMenu = NodePath("UI/pause")
PlayerInfo = NodePath("UI/player_info")
PlayerActions = NodePath("UI/Hideable/PlayerActions")
AdvanceTurnButton = NodePath("UI/Hideable/PlayerActions/AdvanceTurn")
EndTurnButton = NodePath("UI/Hideable/PlayerActions/EndTurn")
ForfeitButton = NodePath("UI/Hideable/PlayerActions/Forfeit")
PauseButton = NodePath("UI/gearbox")
LeaveButton = NodePath("UI/pause/leave")
TurnOrder = NodePath("UI/Hideable/turn_order")
Attacks = NodePath("UI/Hideable/Attacks")
PowerSprite = NodePath("UI/Hideable/Power")
PowerAmount = NodePath("UI/Hideable/Power/text")
CurrentTurn = NodePath("UI/Hideable/Turn")
CurrentAction = NodePath("UI/Hideable/Action")
VictoryMessage = NodePath("UI/win")
DefeatMessage = NodePath("UI/lose")
LeaveMessage = NodePath("UI/leave")
ForfeitMessage = NodePath("UI/forfeit")
CommandCallout = NodePath("UI/command_callout")

[node name="UI" type="Control" parent="GameCamera"]
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -320.0
offset_right = 576.0
offset_bottom = 320.0
pivot_offset = Vector2(576, 320)
mouse_filter = 2

[node name="command_callout" parent="GameCamera/UI" instance=ExtResource("8_gv3dv")]
layout_mode = 1
offset_left = 800.0
offset_top = 136.0
offset_right = -32.0
right = true

[node name="Hideable" type="Control" parent="GameCamera/UI"]
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="GameCamera/UI/Hideable"]
show_behind_parent = true
layout_mode = 0
offset_top = 504.0
offset_right = 1152.0
offset_bottom = 632.0
theme_override_styles/panel = ExtResource("5_mbtgw")

[node name="Turn" type="Label" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 160.0
offset_top = 520.0
offset_right = 992.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 24
text = "TURN
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Action" type="Label" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 160.0
offset_top = 536.0
offset_right = 992.0
offset_bottom = 627.0
theme_override_font_sizes/font_size = 64
text = "ACTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerActions" type="Control" parent="GameCamera/UI/Hideable"]
anchors_preset = 0
offset_top = 504.0
offset_right = 40.0
offset_bottom = 544.0

[node name="AdvanceTurn" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
layout_mode = 0
offset_left = 992.0
offset_right = 1120.0
offset_bottom = 128.0
texture_normal = ExtResource("5_1p0vp")

[node name="EndTurn" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
layout_mode = 0
offset_left = 912.0
offset_top = 56.0
offset_right = 976.0
offset_bottom = 120.0
texture_normal = ExtResource("7_7ft3b")

[node name="Forfeit" type="TextureButton" parent="GameCamera/UI/Hideable/PlayerActions"]
layout_mode = 0
offset_left = 176.0
offset_top = 56.0
offset_right = 240.0
offset_bottom = 120.0
texture_normal = ExtResource("8_chkrk")

[node name="Power" type="TextureRect" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 32.0
offset_top = 504.0
offset_right = 160.0
offset_bottom = 632.0
texture = ExtResource("6_duti3")

[node name="text" type="Label" parent="GameCamera/UI/Hideable/Power"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="turn_order" type="Panel" parent="GameCamera/UI/Hideable"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 104.0
pivot_offset = Vector2(0, 96)
theme_override_styles/panel = ExtResource("5_mbtgw")
script = ExtResource("8_y476x")

[node name="Attacks" type="RichTextLabel" parent="GameCamera/UI/Hideable"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 104.0
offset_right = 128.0
offset_bottom = 136.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
scroll_active = false

[node name="gearbox" type="TextureButton" parent="GameCamera/UI"]
layout_mode = 0
offset_left = 64.0
offset_top = 136.0
offset_right = 128.0
offset_bottom = 200.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_6wsra")

[node name="player_info" type="Panel" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 472.0
offset_top = 112.0
offset_right = 680.0
offset_bottom = 232.0
theme_override_styles/panel = ExtResource("7_r48wm")

[node name="Player" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(104, 48)
texture = ExtResource("9_gke1b")
hframes = 6

[node name="City" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(168, 48)
texture = ExtResource("10_5d75i")

[node name="Capital" type="Sprite2D" parent="GameCamera/UI/player_info"]
position = Vector2(40, 48)
texture = ExtResource("11_i48c4")

[node name="CityAmount" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 144.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 72.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CapitalAmount" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 16.0
offset_top = 36.0
offset_right = 64.0
offset_bottom = 84.0
text = "1"
horizontal_alignment = 1
clip_text = true

[node name="Name" type="Label" parent="GameCamera/UI/player_info"]
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 200.0
offset_bottom = 114.0
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="pause" type="Panel" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 128.0
offset_top = 136.0
offset_right = 1024.0
offset_bottom = 472.0
theme_override_styles/panel = ExtResource("16_ixm5t")

[node name="keys1" type="Label" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 424.0
offset_bottom = 312.0
text = "


Esc  -  Exit
\",\"  -  Zoom out
\".\"  -  Zoom in
\"/\"  -  Reset zoom
Arrow Keys  -  Secondary way to move camera
WASD  -  Tertiary way to move camera
Hold shift to move the camera faster
Hold ctrl to move the camera slower

"
clip_text = true

[node name="keys2" type="Label" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 472.0
offset_top = 24.0
offset_right = 872.0
offset_bottom = 312.0
text = "Ctrl + Space  -  Advance turn
Ctrl + Alt + Space  -  End turn
Ctrl + Alt + \"-\"  -  Forfeit
Ctrl + Alt + Enter  -  Toggle fast AI
Ctrl + E  -  Highlight mobilizable cities
Ctrl + H  -  Toggle capitals
Ctrl + U  -  Toggle UI
Ctrl + T  -  Toggle turn order
Ctrl + Alt + M  -  Toggle mouse scroll
Ctrl + Alt + P  -  Toggle auto phase advancing.
Hold Shift when mobilizing to grab all extra units"
clip_text = true

[node name="leave" type="TextureButton" parent="GameCamera/UI/pause"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 88.0
texture_normal = ExtResource("12_st2cf")

[node name="win" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 384.0
offset_top = 256.0
offset_right = 768.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("7_r48wm")
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lose" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 384.0
offset_top = 256.0
offset_right = 768.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("7_r48wm")
text = "DEFEAT..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="leave" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 464.0
offset_top = 240.0
offset_right = 688.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "Do you want
to leave?"
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="GameCamera/UI/leave"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 144.0
texture_normal = ExtResource("17_0hp27")

[node name="no" type="TextureButton" parent="GameCamera/UI/leave"]
modulate = Color(1, 0.717647, 0.698039, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 144.0
texture_normal = ExtResource("18_mtr1x")

[node name="forfeit" type="Label" parent="GameCamera/UI"]
visible = false
layout_mode = 0
offset_left = 464.0
offset_top = 240.0
offset_right = 688.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("16_ixm5t")
text = "Do you want
to forfeit?
 "
horizontal_alignment = 1

[node name="yes" type="TextureButton" parent="GameCamera/UI/forfeit"]
modulate = Color(0.713726, 0.890196, 0.65098, 1)
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 144.0
texture_normal = ExtResource("17_0hp27")

[node name="no" type="TextureButton" parent="GameCamera/UI/forfeit"]
modulate = Color(1, 0.717647, 0.698039, 1)
layout_mode = 0
offset_left = 128.0
offset_top = 96.0
offset_right = 176.0
offset_bottom = 144.0
texture_normal = ExtResource("18_mtr1x")

[connection signal="pressed" from="GameCamera/UI/leave/yes" to="GameCamera" method="_confirmed_leave"]
[connection signal="pressed" from="GameCamera/UI/leave/no" to="GameCamera" method="_not_leaving"]
[connection signal="pressed" from="GameCamera/UI/forfeit/yes" to="GameCamera" method="_forfeit"]
[connection signal="pressed" from="GameCamera/UI/forfeit/no" to="GameCamera" method="_forfeit_hide"]
